--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -7,10 +7,10 @@ hr {
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
-p {
-    text-transform: uppercase;
-    letter-spacing: 4px;
-}
 a {
     text-decoration: none;
+}
+.link {
+    text-transform: uppercase;
+    letter-spacing: 4px;
 }
