--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,13 @@ a {
 color: black;
 transition: all 0.2s linear;
 }
-a:hover, a:focus {
+
+a:hover  {
 color: #ffafdf;
-text-decoration: none
+text-decoration: none;
+font-size: 24px;
 }
+
 p {
     font-family: Avenir;
     text-transform: uppercase;
