--- a/demos/democss.css
+++ b/demos/democss.css
@@ -11,12 +11,19 @@
     text-align: center;
     
 }
+body {
+    cursor: url(b.png), auto;
+}
+
 .button:hover {
     width: 300px;
     height: 300px;
     background-color: red;
     line-height: 300px;
     color: white;
+}
+.seconds:hover {
+	background-color: red;
 }
 p {
     font-size: 40px;
